--- a/ct_about.html
+++ b/ct_about.html
@@ -8,7 +8,7 @@ and open the template in the editor.
     <head>
         <title>About Curbside Thai</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="Thai, restaurant, Charlotte, food">
     </head>
     <body>
         <div>TODO write content</div>
