--- a/ct_about.html
+++ b/ct_about.html
@@ -6,6 +6,16 @@ and open the template in the editor.
 -->
 <html>
     <head>
+       
+        <!--
+        New Perspectives on HTML5 and CSS3, 7th Edition Tutorial 1
+        Tutorial Case
+        General Information about Curbside Thai
+        Author: Xavier  Riera
+        Date: 03/04/2019
+         Filename: ct_about.html
+        --> 
+        
         <title>About Curbside Thai</title>
         <meta charset="UTF-8">
         <meta name="keywords" content="Thai, restaurant, Charlotte, food">
