--- a/ct_about.html
+++ b/ct_about.html
@@ -21,6 +21,14 @@ and open the template in the editor.
         <meta name="keywords" content="Thai, restaurant, Charlotte, food">
     </head>
     <body>
-        <div>TODO write content</div>
+        <header>
+            <h1>Curbside thai</h1>
+        </header>
+        <article>
+            <h1>About Us</h1>
+        </article>
+        <footer>
+            Curbside Thai 411 Belde Drive, Charlotte NC 28201 704-555-1151
+        </footer>
     </body>
 </html>
