--- a/ct_about.html
+++ b/ct_about.html
@@ -19,6 +19,8 @@ and open the template in the editor.
         <title>About Curbside Thai</title>
         <meta charset="UTF-8">
         <meta name="keywords" content="Thai, restaurant, Charlotte, food">
+        <link href="ct_base.css" rel="stylesheet"/>
+        <link href="ct_layout2.css" rel="stylesheet"/>
     </head>
     <body>
         <header>
@@ -26,7 +28,7 @@ and open the template in the editor.
         </header>
         <article>
             <h1>About Us</h1>
-            <p>Curbside Thai brings the rich flavor of Thailand to 
+            <p><strong>Curbside Thai</strong> brings the rich flavor of Thailand to 
                 North Carolina. Master Chef Sajja Adulet, with over 35 
                 years of experience at the House of Asia, now offers 
                 that same fine dining to the streets of Charlotte 
@@ -38,11 +40,11 @@ and open the template in the editor.
             11 a.m. to 7 p.m. on Monday through Thursday, and 
             11 a.m. to 11 p.m. on Friday and Saturday. Taste the 
             difference! If you can't get away from your desk, 
-            Curbside Thai will deliver.</p>
+            <em>Curbside Thai will deliver</em>.</p>
 
             <p>Contact us to cater your next party and experience 
-            what Carolina Traveler calls the finest Asian food 
-            on or off the streets of Charlotte.</p>
+                what <cite>Carolina Traveler</cite> calls <q>the finest Asian food 
+            on or off the streets of Charlotte</q>.</p>
         </article>
         <footer>
             Curbside Thai 411 Belde Drive, Charlotte NC 28201 704-555-1151
