--- a/ct_about.html
+++ b/ct_about.html
@@ -24,10 +24,11 @@ and open the template in the editor.
     </head>
     <body>
         <header>
-            <h1>Curbside thai</h1>
+            <img src="ct_logo2.png" alt="Curbside Thai" />
         </header>
         <article>
             <h1>About Us</h1>
+            <img src="ct_photo1.png" alt="Curbside thai" />
             <p><strong>Curbside Thai</strong> brings the rich flavor of Thailand to 
                 North Carolina. Master Chef Sajja Adulet, with over 35 
                 years of experience at the House of Asia, now offers 
@@ -47,7 +48,7 @@ and open the template in the editor.
             on or off the streets of Charlotte</q>.</p>
         </article>
         <footer>
-            Curbside Thai 411 Belde Drive, Charlotte NC 28201 704-555-1151
+            Curbside Thai &#8226; 411 Belde Drive, Charlotte NC &nbsp; 28201 &#8226; 704-555-1151
         </footer>
     </body>
 </html>
