editando ct_reviews

--- a/ct_reviews.html
+++ b/ct_reviews.html
@@ -7,8 +7,8 @@
     Tutorial Case
     
     Curbside Thai Reviews Page
-    Author: 
-    Date:   
+    Author: Xavier Riera
+    Date:   04/04/2019
 
     Filename: ct_reviews.html
    -->
@@ -25,7 +25,16 @@
   </header>
   <article>
      <h1>Reviews</h1>
-    
+     <blockquote>
+         <p>The culinary art of the food truck vendor has been steadily 
+        improving over the last 10 years with fine offerings from 
+        Antonio's Italian, Organic on the Road, and now Curbside Thai. 
+        Sajja Adulet is to be congratulated for offering delicious 
+        and authentic Thai food at a reasonable price. We think 
+        Curbside Thai provides the finest Asian food on or off 
+        the streets of Charlotte.</p>
+         <p>Carolina Traveler</p>
+     </blockquote>
   </article>
   <footer>
       Curbside Thai &#8226; 411 Belde Drive, Charlotte NC &nbsp; 28201 &#8226; 704-555-1151
