--- a/ct_reviews.html
+++ b/ct_reviews.html
@@ -35,6 +35,25 @@
         the streets of Charlotte.</p>
          <p>Carolina Traveler</p>
      </blockquote>
+     
+     <blockquote>
+         <p>Steaming rice with a spicy Asian sauce is common street fare 
+            and we all accept its limitations in exchange for the 
+            convenience of a quick bite on the run. With Curbside Thai you 
+            don't have to compromise. Building on his experience as a 
+            master chef at several fine establishments on the East Coast, 
+            Sajja Adulet has brought the taste of fine dining to the 
+            Food Cart Wars and we couldn't be happier.</p>
+         <p>Food Cart Review</p>
+     </blockquote>
+     <blockquote>
+         <p>Best in Show (Asian)</p>
+         <p>Food Cart Cook-off</p>
+     </blockquote>
+     <blockquote>
+         <p>First Prize (Vendor)</p> 
+         <p>Vendy Awards</p>
+     </blockquote>
   </article>
   <footer>
       Curbside Thai &#8226; 411 Belde Drive, Charlotte NC &nbsp; 28201 &#8226; 704-555-1151
