--- a/ct_contact.html
+++ b/ct_contact.html
@@ -6,15 +6,15 @@
     Tutorial 1
     Tutorial Case
     
-    Curbside Thai Mobile Menu
+    Curbside Thai Contact Information
     Author: 
     Date:   
 
-    Filename: ct_menu.html
+    Filename: ct_contact.html
    -->
 
    <meta charset="utf-8" />
-   <title>Curbside Thai Mobile Menu</title>
+   <title>Contacting Curbside Thai</title>
    <link href="ct_base.css" rel="stylesheet" />
    <link href="ct_layout2.css" rel="stylesheet" />
 </head>
@@ -24,8 +24,17 @@
      <img src="ct_logo2.png" alt="Curbside Thai" />
   </header>
   <article>
-     <h1>Mobile Menu</h1>
-    
+     <h1>Contact Us</h1>
+     <p>Contact Curbside Thai for your next event or just to find
+    out when our mobile truck will next be in your area. 
+    Employment opportunities available now!</p>
+     <address>
+         Curbside Thai<br/>
+        411 Belde Drive<br/>
+        Charlotte NC 28201
+     </address>
+     <p>Call: (704) 555-1151</p>
+     <p>Email: curbside.thai@example.com</p>
   </article>
   <footer>
       Curbside Thai &#8226; 411 Belde Drive, Charlotte NC &nbsp; 28201 &#8226; 704-555-1151
