--- a/ct_menu.html
+++ b/ct_menu.html
@@ -6,15 +6,15 @@
     Tutorial 1
     Tutorial Case
     
-    Curbside Thai Contact Information
-    Author: 
-    Date:   
+    Curbside Thai Mobile Menu
+    Author: Xavier Riera
+    Date:   04/04/2019
 
-    Filename: ct_contact.html
+    Filename: ct_menu.html
    -->
 
    <meta charset="utf-8" />
-   <title>Contacting Curbside Thai</title>
+   <title>Curbside Thai Mobile Menu</title>
    <link href="ct_base.css" rel="stylesheet" />
    <link href="ct_layout2.css" rel="stylesheet" />
 </head>
@@ -24,7 +24,7 @@
      <img src="ct_logo2.png" alt="Curbside Thai" />
   </header>
   <article>
-     <h1>Contact Us</h1>
+     <h1>Mobile Menu</h1>
     
   </article>
   <footer>
