--- a/ct_locations_txt.html
+++ b/ct_locations_txt.html
@@ -7,8 +7,8 @@
     Tutorial Case
     
     Curbside Thai Locations
-    Author: 
-    Date:   
+    Author: Xavier riera
+    Date:   04/04/2019
 
     Filename: ct_locations.html
    -->
@@ -25,7 +25,17 @@
   </header>
   <article>
      <h1>Today's Locations</h1>
-    
+     <img src="ct_mao.png" alt=""/>
+     <dl id="ct_locations">
+         <dt>11 a.m. to 2 p.m.</dt>
+         <dd> 205 West 3rd Street, Charlotte, NC</dd>
+         <dt>2 p.m. to 4 p.m.</dt>
+         <dd> 443 West 2nd Street, Charlotte, NC</dd>
+         <dt> 4 p.m. to 8 p.m.</dt>
+         <dd>900 South Mint Street, Charlotte, NC</dd>
+         <dt>8 p.m. to 11 p.m.</dt>
+         <dd>168 North Church Street, Charlotte, NC</dd>
+     </dl>
   </article>
   <footer>
       Curbside Thai &#8226; 411 Belde Drive, Charlotte NC &nbsp; 28201 &#8226; 704-555-1151
