--- a/ct_about.html
+++ b/ct_about.html
@@ -24,7 +24,17 @@ and open the template in the editor.
     </head>
     <body>
         <header>
-            <img src="ct_logo2.png" alt="Curbside Thai" />
+            <a href="ct_start.html"><img src="ct_logo2.png" alt="Curbside Thai" /></a>
+            <nav> 
+                <ul>
+                    <li><a href="ct_about.html">About</a></li>
+                    <li><a href="ct_locations.html">Locations</a></li>
+                    <li><a href="ct_menu.html">Menu</a></li>
+                    <li><a href="ct_reviews.html">Reviews</a></li>
+                    <li><a href="ct_catering.html">Catering</a></li>
+                    <li><a href="ct_contact.html">Contact</a></li>
+               </ul> 
+            </nav>
         </header>
         <article>
             <h1>About Us</h1>
