--- a/ct_reviews.html
+++ b/ct_reviews.html
@@ -20,9 +20,19 @@
 </head>
 
 <body>
-  <header class="logo">
-     <img src="ct_logo2.png" alt="Curbside Thai" />
-  </header>
+     <header>
+            <a href="ct_start.html"><img src="ct_logo2.png" alt="Curbside Thai" /></a>
+            <nav> 
+                <ul>
+                    <li><a href="ct_about.html">About</a></li>
+                    <li><a href="ct_locations.html">Locations</a></li>
+                    <li><a href="ct_menu.html">Menu</a></li>
+                    <li><a href="ct_reviews.html">Reviews</a></li>
+                    <li><a href="ct_catering.html">Catering</a></li>
+                    <li><a href="ct_contact.html">Contact</a></li>
+               </ul> 
+            </nav>
+        </header>
   <article>
      <h1>Reviews</h1>
      <blockquote>
