correo y telefono vinculo

--- a/ct_contact.html
+++ b/ct_contact.html
@@ -43,8 +43,8 @@
         411 Belde Drive<br/>
         Charlotte NC 28201
      </address>
-     <p>Call: (704) 555-1151</p>
-     <p>Email: curbside.thai@example.com</p>
+     <p>Call: <a href="tel:(704) 555-1151">(704) 555-1151</a></p>
+     <p>Email: <a href="mailto:curbside.thai@example.com">curbside.thai@example.com</a></p>
   </article>
   <footer>
       Curbside Thai &#8226; 411 Belde Drive, Charlotte NC &nbsp; 28201 &#8226; 704-555-1151
