Las páginas *.html deberán tener al menos una etiqueta <section>, <article> y <aside>.

--- a/ct_about.html
+++ b/ct_about.html
@@ -21,6 +21,11 @@ and open the template in the editor.
         <meta name="keywords" content="Thai, restaurant, Charlotte, food">
         <link href="ct_base.css" rel="stylesheet"/>
         <link href="ct_layout2.css" rel="stylesheet"/>
+        <link href="../estilo.css" rel="stylesheet"/>
+   <!--  <style type="text/css">
+      h1 {color: red; font-family: arial; font-size: large; }
+      p { color: gray; font-family: Verdana; font-size: medium; }
+  </style>-->
     </head>
     <body>
         <header>
@@ -38,6 +43,7 @@ and open the template in the editor.
         </header>
         <article>
             <h1>About Us</h1>
+            <h2> xavier</h2>
             <img src="ct_photo1.png" alt="Curbside thai" />
             <p><strong>Curbside Thai</strong> brings the rich flavor of Thailand to 
                 North Carolina. Master Chef Sajja Adulet, with over 35 
