--- a/prueba.html
+++ b/prueba.html
@@ -4,14 +4,15 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-
 <html>
     <head>
+        <title>TODO supply a title</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="estilos/estilo.css" rel="stylesheet"/>
-        <title></title>
     </head>
     <body>
-        <h2>xavie riera</h2>
+        <h2>xavier riera</h2>
+        <h3>Hola holaaaaaaa</h3>
     </body>
 </html>
